Fix challenge status alignment

--- a/frontend/src/css/modules/landing.scss
+++ b/frontend/src/css/modules/landing.scss
@@ -346,6 +346,10 @@ section.bg-section {
     }
 }
 
+p.challenge-status {
+    overflow: hidden;
+}
+
 a.view-more {
     color: $highlight;
     &:hover {
